--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,5 +10,9 @@ $c-g-400: hsl(220, 13%, 13%);
 
 $fs-10: 1rem;
 $fs-12: 1.2rem;
+$fs-14: 1.4rem;
 $fs-16: 1.6rem;
 $fs-28: 2.8rem;
+$fs-48: 4.8rem;
+
+$bs-orange: 0px 8px 16px rgba(255, 166, 0, 0.208);
