--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,14 @@
   margin: 0 auto; }
 
 .header .container {
-  align-items: center;
   padding-top: 2.4rem;
-  padding-bottom: 2.4rem; }
+  padding-bottom: 2.4rem;
+  align-items: center;
+  position: relative; }
+  @media screen and (min-width: 62.375em) {
+    .header .container {
+      padding: 2.4rem 0;
+      border-bottom: 1px solid #b6bcc8; } }
 
 .header__cart-dropdown {
   z-index: 2;
@@ -28,7 +33,8 @@
   transform: translateY(-1.6rem); }
   @media screen and (min-width: 62.375em) {
     .header__cart-dropdown {
-      display: none; } }
+      width: 40rem;
+      right: 0rem; } }
   .header__cart-dropdown.active {
     transform: translateY(0);
     z-index: 4;
@@ -123,8 +129,38 @@
   transform: translateX(-100%);
   transition: all 0.3s ease;
   visibility: hidden; }
+  @media screen and (min-width: 62.375em) {
+    .header__menu {
+      margin-left: 6.4rem;
+      position: relative;
+      width: auto;
+      height: auto;
+      gap: 4rem;
+      transform: none;
+      background-color: transparent;
+      visibility: visible;
+      padding: 0;
+      font-weight: 500;
+      display: flex; } }
   .header__menu li {
-    line-height: 2.6; }
+    line-height: 2.6;
+    position: relative; }
+    @media screen and (min-width: 62.375em) {
+      .header__menu li:hover::after {
+        opacity: 1;
+        transform: translateX(0); }
+      .header__menu li::after {
+        transition: all 0.2s ease;
+        content: "";
+        position: absolute;
+        bottom: -24px;
+        opacity: 0;
+        left: 0;
+        width: 100%;
+        transform: translateX(-16px);
+        height: 4px;
+        display: block;
+        background-color: #ff7d1a; } }
   .header__menu.active {
     visibility: visible;
     transform: translateX(0);
@@ -198,6 +234,25 @@
     @media screen and (min-width: 62.375em) {
       .product__carousel .image-container > * {
         border-radius: 1.6rem; } }
+  .product__carousel input[type="radio"] {
+    display: none; }
+  .product__carousel input[type="radio"]:checked + .thumbnail {
+    border: 2px solid #ff7d1a; }
+    .product__carousel input[type="radio"]:checked + .thumbnail img {
+      filter: opacity(0.5); }
+  .product__carousel .thumbnail-container {
+    display: none; }
+    @media screen and (min-width: 62.375em) {
+      .product__carousel .thumbnail-container {
+        margin-top: 2.4rem;
+        display: flex;
+        gap: 2.4rem; } }
+  .product__carousel .thumbnail {
+    border-radius: 1.2rem;
+    overflow: hidden;
+    cursor: pointer; }
+    .product__carousel .thumbnail:hover {
+      filter: opacity(0.5); }
 
 .product__details {
   padding: 2.4rem;
@@ -213,6 +268,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between; }
+  @media screen and (min-width: 62.375em) {
+    .product .price {
+      width: 100%; } }
   .product .price__discount {
     padding: 0.4rem 0.8rem;
     border-radius: 0.8rem;
@@ -223,6 +281,9 @@
 
 .product .counter {
   position: relative; }
+  @media screen and (min-width: 62.375em) {
+    .product .counter {
+      width: 100%; } }
   .product .counter input[type="number"] {
     border: 0;
     background-color: #f7f8fd;
@@ -260,6 +321,9 @@
   gap: 1.6rem;
   box-shadow: 0px 8px 16px rgba(255, 166, 0, 0.208);
   justify-content: center; }
+  @media screen and (min-width: 62.375em) {
+    .product .button {
+      width: 100%; } }
 
 .label {
   text-transform: uppercase;
