--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,10 @@
 .header .container {
   padding-top: 2.4rem;
   padding-bottom: 2.4rem;
-  align-items: center;
-  position: relative; }
+  align-items: center; }
   @media screen and (min-width: 62.375em) {
     .header .container {
+      position: relative;
       padding: 2.4rem 0;
       border-bottom: 1px solid #b6bcc8; } }
 
@@ -185,7 +185,10 @@
 .header__profile {
   cursor: pointer;
   width: 3.2rem;
-  margin-left: 2.4rem; }
+  margin-left: 2.4rem;
+  border-radius: 50%; }
+  .header__profile:hover {
+    outline: 2px solid #ff7d1a; }
 
 @media screen and (min-width: 62.375em) {
   .product {
