--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -16,9 +16,9 @@
     padding-top: 2.4rem;
     padding-bottom: 2.4rem;
     align-items: center;
-    position: relative;
 
     @include lg {
+      position: relative;
       padding: 2.4rem 0;
       border-bottom: 1px solid $c-g-200;
     }
@@ -243,6 +243,11 @@
     cursor: pointer;
     width: 3.2rem;
     margin-left: 2.4rem;
+    border-radius: 50%;
+
+    &:hover {
+      outline: 2px solid $c-p-orange-main;
+    }
   }
 }
 
